--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ python:
   - 3.6
 
 install:
-  - pip install -r requirements.txt
+  - pip install -r requirements_dev.txt
 
 script:
   - pycodestyle theOracle
